--- a/styels/styels.css
+++ b/styels/styels.css
@@ -65,3 +65,54 @@
     padding: 15px;
     border: 10px;
 }  
+
+/* main styel */
+.first-section{
+    box-shadow: 0px 3px 3px 0px;
+    margin: 30px;
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    background-color: white
+    
+}
+.about-title{
+   background: #f2f1f1;
+   margin-bottom: 20px;
+   margin-left: 50px;
+   margin-right: 50px;
+   padding-left: 40px;
+   padding-right: 40px;
+}
+ 
+
+
+
+.item-title{
+    text-align: center;
+    margin-top: 80px;
+    margin-left:144px ;
+    margin: 144px;
+    padding: 10px 10px;
+}
+.title-description{
+    color: black;
+    font-size: 32;
+    font-weight:bolder;
+}
+.second-phara{
+    color: #0D1321;
+    font-size: 16px;
+}
+
+
+.more-skill{
+  text-align: center;
+}
+video{
+    height: auto;
+    width: auto;
+    border: 24px;
+    border-radius: 5px;
+    border-inline-color:var(#ff0000);
+}
